--- a/application/index/view/cash/cash_back.html
+++ b/application/index/view/cash/cash_back.html
@@ -96,11 +96,11 @@
     </div>
     <div class="header-bot">
       <div class="header-bot-common total-cash">
-        <p class="num">4568.46</p>
+        <p class="num">{$data.cashed|number_format=2}</p>
         <p class="txt">累计返利(元)</p>
       </div>
       <div class="header-bot-common wait-cash">
-        <p class="num">4568.46</p>
+        <p class="num">{$data.left|number_format=2}</p>
         <p class="txt">待返利(元)</p>
       </div>
     </div>
@@ -114,7 +114,7 @@
           <i class="icon iconfont icon-43"></i>
         </div>
         <div class="column-right">
-          <p>提现记录</p>
+          <p>返现记录</p>
           <i class="icon iconfont icon-youjiantou1"></i>
         </div>
       </a>
