--- a/application/index/view/company/company_info.html
+++ b/application/index/view/company/company_info.html
@@ -43,15 +43,15 @@
 
 <div class="company-info-main">
   <div class="company-logo">
-    <img src="__INDEX_IMG__/j-banner.png">
+    <img src="{$data->company_img[0]}">
   </div>
 
   <div class="introduce-content">
-    <p>重庆盛科能源有限公司办公室地址位于长江上游地区经济中心、金融中心重庆，重庆市垫江县桂溪镇渝东建材市场对面（新星化工厂），于2016年05月10日在重庆市垫江县工商行政管理局注册成立，注册资本为500（万元），在公司发展壮大的2年里，我们始终为客户提供好的产品和技术支持、健全的售后服务，我公司主要经营零售：易燃液体、调合清洁柴油、甲醇汽油。（以上经营范围按许可证核定事项和期限从事经营）销售：润滑油。（依法须经批准的项目，经相关部门批准后方可开展经营活动），我们有好的产品和专业的销售和技术团队，我公司属于重庆能源公司行业，如果您对我公司的产品服务有兴趣，期待您在线留言或者来电咨询</p>
+    <p>{$data.company_info}</p>
 
     <div class="introduce-img">
-      <img src="__INDEX_IMG__/j-banner1.png" style="width: 346px;height: 331px;">
-      <img src="__INDEX_IMG__/j-banner2.png" style="width: 383px;height: 256px;">
+      <img src="{$data->company_img[1]}" style="width: 346px;height: 331px;">
+      <img src="{$data->company_img[2]}" style="width: 383px;height: 256px;">
     </div>
   </div>
 </div>
