--- a/application/index/view/coupon/card_volume.html
+++ b/application/index/view/coupon/card_volume.html
@@ -40,7 +40,7 @@
   <div class="card-back"></div>
 
   <p class="card-text">卡卷空空如也~</p>
-  <div class="card-ljgm">
+  <div class="card-ljgm" onclick=window.location.href="{:url('product/buy_product')}">
     立即购买
   </div>
 </div>
