--- a/application/index/view/user/user_center.html
+++ b/application/index/view/user/user_center.html
@@ -72,9 +72,9 @@
       <img src="__INDEX_IMG__/header_logo.jpg">
     </div>
     <div class="header-img">
-      <img src="__INDEX_IMG__/header_logo.jpg">
+      <img src="{$data.avatar}">
     </div>
-    <p>时光易老i</p>
+    <p>{$data.user_name}</p>
   </div>
 
   <!-- column start -->
