--- a/application/system/view/consumer/distribution.html
+++ b/application/system/view/consumer/distribution.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>下架分销|后台管理系统</title>
+    <title>下级分销|后台管理系统</title>
     {include file="public/head" /}
 
     <link rel="stylesheet" type="text/css" href="__STATIC__/system/css/jquery.treetable.theme.default.css"/>
