--- a/application/system/view/banner/modify.html
+++ b/application/system/view/banner/modify.html
@@ -62,8 +62,8 @@
     </div>
 </form>
 
-<script src="__STATIC__/system/js/ajax-submit.js"></script>
-<script src="__STATIC__/system/js/upload.js" type="text/javascript" charset="utf-8"></script>
+<script src="__STATIC__/system/js/ajax-submit.js?ver={:date('ymd')}"></script>
+<script src="__STATIC__/system/js/upload.js?ver={:date('ymd')}" type="text/javascript" charset="utf-8"></script>
 <script>
 
 </script>
