--- a/application/system/view/franchisee/modify.html
+++ b/application/system/view/franchisee/modify.html
@@ -31,7 +31,34 @@
                     <input id="tel" class="must" type="text" name="tel" value="{$infos->tel|default=''}" />
                 </td>
             </tr>
-
+            <tr class="h50">
+                <td><label for="mark">公司类型：</label></td>
+                <td colspan="3">
+                    {if condition="isset($infos) and $infos->mark"}
+                    <label><input name="mark" class="va_m" type="radio" value="0" {if condition="$infos->getData('mark') eq 0"}checked{/if}>代理商</label>
+                    <label><input name="mark" class="va_m" type="radio" value="1" {if condition="$infos->getData('mark') eq 1"}checked{/if}>门店</label>
+                    {else/}
+                    <label><input name="mark" class="va_m" type="radio" value="0" checked>代理商</label>
+                    <label><input name="mark" class="va_m" type="radio" value="1" >门店</label>
+                    {/if}
+                </td>
+            </tr>
+            <tr class="h50">
+                <td>上传图片： </td>
+                <td class="imgCon" colspan="3">
+                    {if condition="isset($infos) and $infos->img"}
+                    <div class="img">
+                        <img src="{$infos->img}" class="w_100 h_100" onclick="bigimg(this)">
+                        <p><span onclick="picremove(this);">删除</span></p>
+                        <input type="hidden" name="img" value="{$infos->img}">
+                    </div>
+                    {/if}
+                    <div class="img upload-btn">
+                        <input type="file" name="upload_files" style="display: none" class="upload_files" data-hiddenname="img" data-url="{:url('Tools/upload_img')}">
+                        <a>+</a>
+                    </div>
+                </td>
+            </tr>
         </table>
         <div class="layerBtns">
             <a class="btn js-ajax-form-btn" data-layer="true" >立即提交</a>
@@ -40,7 +67,8 @@
     </div>
 </form>
 
-<script src="__STATIC__/system/js/ajax-submit.js"></script>
+<script src="__STATIC__/system/js/ajax-submit.js?ver={:date('ymdHis')}"></script>
+<script src="__STATIC__/system/js/upload.js?ver={:date('ymdHis')}" type="text/javascript" charset="utf-8"></script>
 <script>
     $('input.priv_detail').on('change',function () {
         checkbox_change($(this));
